# benchmark

./: .gitignore  README.md  go.mod
json/go/: main.go
json/python/: pyproject.toml
locust/: bench.py  pyproject.toml
