[tool.poetry]
name = "python-json"
version = "0.1.0"
description = ""
authors = ["Yuki Nagae <yuki.nagae1130@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
